# Clue2

./: .dockerignore  .env  .gitignore  Pipfile  Readme.md  clue-config.yaml  config-systems.yaml  create-kind-cluster.sh  docker-compose.yml  eval.innervalidation.basti.ipynb  eval3000.basti.ipynb  eval3000.py.ipynb  eval6000.ipynb  eval_aux_watt.ipynb  eval_data_cleaning.ipynb  eval_failiure_rate.ipynb  eval_latency.ipynb  eval_master_table.ipynb  eval_reqs.ipynb  eval_resouce_overhead.ipynb  eval_resouce_utilization.ipynb  eval_runtime_overhead.ipynb  eval_scaling.ipynb  eval_template copy.ipynb  eval_template.ipynb  eval_total_costs.ipynb  evaluation.ipynb  evaluation_new.ipynb  experiment.py  grafana_dashboard.json  hello.py  kind-config.yaml  prometheus.yml  pyproject.toml  resources.ipynb  setup_grafana_dashboards.py
clue_deployer/: Dockerfile  deploy.py  entrypoint.sh  experiment.py  experiment_environment.py  experiment_list.py  experiment_results.py  experiment_runner.py  helm_wrapper.py  main.py  patch_kubeconfig.py  prepare_kubeconfig.py  pyproject.toml  workload_runner.py
clue_deployer/agent/: Readme.md  application.properties  debug.py  test.py
clue_deployer/config/: __init__.py  clue_config.py  sut_config.py
clue_deployer/k8s/: clue-deployer-job.yaml  clue-deployer-rbac.yaml
clue_deployer/models/: ResultsResponse.py  StatusOut.py  SutListResponse.py
clue_deployer/service/: models.py  service.py  status.py  status_manager.py
clue_deployer/src/: autoscaling_deployer.py  deploy.py  experiment.py  experiment_deployer.py  experiment_environment.py  experiment_list.py  experiment_results.py  experiment_runner.py  experiment_workloads.py  helm_wrapper.py  logger.py  logging_config.py  main.py  plotter.py  run.py  variant_deployer.py  variant_runner.py  variants_list.py  workload_runner.py
clue_deployer/src/agent/: Dockerfile  Pipfile  agent.py  application.properties  k8s.yml  kustomization.yaml  setup.py  test.py
clue_deployer/src/config/: __init__.py  clue_config.py  config.py  env_config.py  experiment_configs.py  sut_config.py  (+2 more)
(+514 files in other folders)
