[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "clue2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "docker>=7.1.0",
    "kubernetes>=32.0.1",
    "locust>=2.33.0",
    "pydantic>=2.11.4",
    "pydantic-settings>=2.9.1",
    "pydantic-yaml>=1.4.0",
    "requests>=2.32.3",
    "ruamel-yaml>=0.17.40",
    "tabulate>=0.9.0",
    "yaml-patch>=1.1.0",
    "uvicorn>=0.34.3", 
    "fastapi>=0.111",
    "debugpy",
    "prometheus-api-client",
    "flask",
    "flask-sock",
    "gunicorn",
]

[tool.setuptools]
packages = ["clue_deployer"]
